--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: hsl(218, 28%, 13%);
+  background-color: hsl(0, 0%, 100%);
   position: relative;
   overflow-x: hidden;
 }
@@ -243,7 +243,7 @@ h5:hover {
     height: 100vh;
   }
 }
-@media screen and (max-width: 470px) {
+@media screen and (max-width: 480px) {
   .navigationsPanel ul li {
     margin: 10px auto;
   }
@@ -251,9 +251,9 @@ h5:hover {
     height: 100vh;
   }
   #pic1 {
-    width: 90%;
-    margin-left: -10px;
-    margin-top: 21px;
+    width: 70%;
+    margin-left: 50px;
+    margin-top: -11%;
   }
 }
 @media screen and (max-width: 378px) {
